--- a/po/de.po
+++ b/po/de.po
@@ -1,28 +1,30 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# German translation of pavucontrol
+# Copyright (C) 2008 pavucontrol
+# This file is distributed under the same license as the pavucontrol package.
+# Fabian Affolter <fab@fedoraproject.org>, 2008.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: pavucontrol\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-08-05 20:39+0200\n"
-"PO-Revision-Date: 2008-08-05 20:49+0100\n"
-"Last-Translator: Lennart Poettering <lennart@poettering.net>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"POT-Creation-Date: 2008-08-29 09:18+0000\n"
+"PO-Revision-Date: 2008-08-29 12:32+0100\n"
+"Last-Translator: Fabian Affolter <fab@fedoraproject.org>\n"
+"Language-Team: German <fedora-trans-de@redhat.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Poedit-Language: German\n"
 
 #: ../src/pavucontrol.desktop.in.h:1
 msgid "Adjust the volume level"
 msgstr "Lautstärke anpassen"
 
 #: ../src/pavucontrol.desktop.in.h:2
-#: ../src/pavucontrol.cc:1966
+#: ../src/pavucontrol.cc:2013
 msgid "PulseAudio Volume Control"
-msgstr "PulseAudio Lautstärkeregler"
+msgstr "PulseAudio-Lautstärkeregler"
 
 #: ../src/pavucontrol.desktop.in.h:3
 #: ../src/pavucontrol.glade.h:27
@@ -32,23 +34,23 @@ msgstr "Lautstärkeregler"
 #: ../src/pavucontrol.glade.h:2
 #, no-c-format
 msgid "50%"
-msgstr ""
+msgstr "50%"
 
 #: ../src/pavucontrol.glade.h:3
 msgid "<b>S_how:</b>"
-msgstr ""
+msgstr "<b>A_nzeigen:</b>"
 
 #: ../src/pavucontrol.glade.h:4
 msgid "<b>Sho_w:</b>"
-msgstr ""
+msgstr "<b>Anze_igen:</b>"
 
 #: ../src/pavucontrol.glade.h:5
 msgid "<b>_Show:</b>"
-msgstr ""
+msgstr "<b>_Anzeigen:</b>"
 
 #: ../src/pavucontrol.glade.h:6
 msgid "<b>left-front</b>"
-msgstr ""
+msgstr "<b>links-vorne</b>"
 
 #: ../src/pavucontrol.glade.h:7
 msgid "<i>No application is currently playing audio.</i>"
@@ -74,6 +76,11 @@ msgid ""
 "Virtual Input Devices\n"
 "Monitors"
 msgstr ""
+"Alle Eingabegeräte\n"
+"Alle ausser Bildschirme\n"
+"HardwareEingabegeräte\n"
+"Virtuelle Eingabegeräte\n"
+"Bildschirme"
 
 #: ../src/pavucontrol.glade.h:16
 msgid ""
@@ -81,6 +88,9 @@ msgid ""
 "Hardware Output Devices\n"
 "Virtual Output Devices"
 msgstr ""
+"Alle Ausgabegeräte\n"
+"Hardware-Ausgabegeräte\n"
+"Virtuelle Ausgabegeräte"
 
 #. Applications All streams
 #: ../src/pavucontrol.glade.h:20
@@ -89,22 +99,25 @@ msgid ""
 "Applications\n"
 "Virtual Streams"
 msgstr ""
+"Alle Streams\n"
+"Anwendungen\n"
+"Virtuelle Streams"
 
 #: ../src/pavucontrol.glade.h:23
 msgid "Lock channels together"
-msgstr ""
+msgstr "Blockieren aller Kanälen zusammen"
 
 #: ../src/pavucontrol.glade.h:24
 msgid "Mute audio"
-msgstr ""
+msgstr "Audio stumm schalten"
 
 #: ../src/pavucontrol.glade.h:25
 msgid "Open menu"
-msgstr ""
+msgstr "Öffne Menü"
 
 #: ../src/pavucontrol.glade.h:26
 msgid "Stream Title"
-msgstr ""
+msgstr "Stream-Titel"
 
 #: ../src/pavucontrol.glade.h:28
 msgid "_Input Devices"
@@ -122,177 +135,182 @@ msgstr "_Wiedergabe"
 msgid "_Recording"
 msgstr "_Aufnahme"
 
-#: ../src/pavucontrol.cc:606
-msgid "pa_context_set_sink_volume_by_index() failed"
-msgstr ""
-
-#: ../src/pavucontrol.cc:621
-msgid "pa_context_set_sink_mute_by_index() failed"
-msgstr ""
+#: ../src/pavucontrol.cc:419
+msgid "Volume Control Feedback Sound"
+msgstr "Lautstärkeregler-Rückgabeklang"
 
 #: ../src/pavucontrol.cc:635
-msgid "pa_context_set_default_sink() failed"
-msgstr ""
+msgid "pa_context_set_sink_volume_by_index() failed"
+msgstr "pa_context_set_sink_volume_by_index() fehlgeschlagen"
 
-#: ../src/pavucontrol.cc:643
-msgid "_Default"
-msgstr ""
+#: ../src/pavucontrol.cc:650
+msgid "pa_context_set_sink_mute_by_index() failed"
+msgstr "pa_context_set_sink_mute_by_index() fehlgeschlagen"
 
 #: ../src/pavucontrol.cc:664
-msgid "pa_context_set_source_volume_by_index() failed"
-msgstr ""
+msgid "pa_context_set_default_sink() failed"
+msgstr "pa_context_set_default_sink() fehlgeschlagen"
 
-#: ../src/pavucontrol.cc:679
-msgid "pa_context_set_source_mute_by_index() failed"
-msgstr ""
+#: ../src/pavucontrol.cc:672
+msgid "_Default"
+msgstr "_Vorgabe"
 
 #: ../src/pavucontrol.cc:693
+msgid "pa_context_set_source_volume_by_index() failed"
+msgstr "pa_context_set_source_volume_by_index() fehlgeschlagen"
+
+#: ../src/pavucontrol.cc:708
+msgid "pa_context_set_source_mute_by_index() failed"
+msgstr "pa_context_set_source_mute_by_index() fehlgeschlagen"
+
+#: ../src/pavucontrol.cc:722
 msgid "pa_context_set_default_source() failed"
-msgstr ""
+msgstr "pa_context_set_default_source() fehlgeschlagen"
 
-#: ../src/pavucontrol.cc:702
-#: ../src/pavucontrol.cc:805
+#: ../src/pavucontrol.cc:731
+#: ../src/pavucontrol.cc:834
 msgid "_Move Stream..."
-msgstr "_Verschiebe Strom..."
+msgstr "_Verschiebe Stream..."
 
-#: ../src/pavucontrol.cc:703
-#: ../src/pavucontrol.cc:806
+#: ../src/pavucontrol.cc:732
+#: ../src/pavucontrol.cc:835
 msgid "_Terminate Stream"
-msgstr "_Beende Strom"
+msgstr "_Beende Stream"
 
-#: ../src/pavucontrol.cc:729
+#: ../src/pavucontrol.cc:758
 msgid "pa_context_set_sink_input_volume() failed"
-msgstr ""
+msgstr "pa_context_set_sink_input_volume() fehlgeschlagen"
 
-#: ../src/pavucontrol.cc:744
+#: ../src/pavucontrol.cc:773
 msgid "pa_context_set_sink_input_mute() failed"
-msgstr ""
+msgstr "pa_context_set_sink_input_mute() fehlgeschlagen"
 
-#: ../src/pavucontrol.cc:778
+#: ../src/pavucontrol.cc:807
 msgid "pa_context_kill_sink_input() failed"
-msgstr ""
+msgstr "pa_context_kill_sink_input() fehlgeschlagen"
 
-#: ../src/pavucontrol.cc:795
+#: ../src/pavucontrol.cc:824
 msgid "pa_context_move_sink_input_by_index() failed"
-msgstr ""
+msgstr "pa_context_move_sink_input_by_index() fehlgeschlagen"
 
-#: ../src/pavucontrol.cc:831
+#: ../src/pavucontrol.cc:860
 msgid "pa_context_kill_source_output() failed"
-msgstr ""
+msgstr "pa_context_kill_source_output() fehlgeschlagen"
 
-#: ../src/pavucontrol.cc:872
+#: ../src/pavucontrol.cc:901
 msgid "pa_context_move_source_output_by_index() failed"
-msgstr ""
+msgstr "pa_context_move_source_output_by_index() fehlgeschlagen"
 
-#: ../src/pavucontrol.cc:914
+#: ../src/pavucontrol.cc:943
 msgid "pa_ext_stream_restore_write() failed"
-msgstr ""
+msgstr "pa_ext_stream_restore_write() fehlgeschlagen"
 
-#: ../src/pavucontrol.cc:1035
+#: ../src/pavucontrol.cc:1065
 msgid "Failed to read data from stream"
-msgstr ""
+msgstr "Lesen der Stream-Daten fehlschlagen"
 
-#: ../src/pavucontrol.cc:1069
-#: ../src/pavucontrol.cc:1105
+#: ../src/pavucontrol.cc:1099
+#: ../src/pavucontrol.cc:1135
 msgid "Peak detect"
-msgstr ""
+msgstr "Ausschlagsserkennung"
 
-#: ../src/pavucontrol.cc:1070
-#: ../src/pavucontrol.cc:1106
+#: ../src/pavucontrol.cc:1100
+#: ../src/pavucontrol.cc:1136
 msgid "Failed to create monitoring stream"
-msgstr ""
+msgstr "Erstellung des Überwachungsstream fehlgeschlagen"
 
-#: ../src/pavucontrol.cc:1078
-#: ../src/pavucontrol.cc:1115
+#: ../src/pavucontrol.cc:1108
+#: ../src/pavucontrol.cc:1145
 msgid "Failed to connect monitoring stream"
-msgstr ""
+msgstr "Verbindung zu Überwachungsstream fehlgeschlagen"
 
-#: ../src/pavucontrol.cc:1355
+#: ../src/pavucontrol.cc:1385
 msgid "System Sounds"
-msgstr ""
+msgstr "System-Klänge"
 
-#: ../src/pavucontrol.cc:1634
+#: ../src/pavucontrol.cc:1667
+#, fuzzy
 msgid "Sink callback failure"
-msgstr ""
+msgstr "Fehler beim Lesen von GIF: %s"
 
-#: ../src/pavucontrol.cc:1650
+#: ../src/pavucontrol.cc:1686
 msgid "Source callback failure"
-msgstr ""
+msgstr "Quellen Callback-Fehler"
 
-#: ../src/pavucontrol.cc:1666
+#: ../src/pavucontrol.cc:1705
 msgid "Sink input callback failure"
 msgstr ""
 
-#: ../src/pavucontrol.cc:1682
+#: ../src/pavucontrol.cc:1724
 msgid "Source output callback failure"
-msgstr ""
+msgstr "Quellen-Ausgabe Callback-Fehler"
 
-#: ../src/pavucontrol.cc:1713
+#: ../src/pavucontrol.cc:1758
 msgid "Client callback failure"
-msgstr ""
+msgstr "Client Callback-Fehler"
 
-#: ../src/pavucontrol.cc:1729
+#: ../src/pavucontrol.cc:1774
 msgid "Server info callback failure"
-msgstr ""
+msgstr "Server-Information Callback-Fehler"
 
-#: ../src/pavucontrol.cc:1746
-#: ../src/pavucontrol.cc:1931
+#: ../src/pavucontrol.cc:1791
+#: ../src/pavucontrol.cc:1976
 #, c-format
 msgid "Failed to initialized stream_restore extension: %s"
-msgstr ""
+msgstr "Initialisierung von stream_restore extension fehlgeschlagen: %s"
 
-#: ../src/pavucontrol.cc:1766
+#: ../src/pavucontrol.cc:1811
 msgid "pa_ext_stream_restore_read() failed"
-msgstr ""
+msgstr "pa_ext_stream_restore_read() fehlgeschlagen"
 
-#: ../src/pavucontrol.cc:1783
+#: ../src/pavucontrol.cc:1828
 msgid "pa_context_get_sink_info_by_index() failed"
-msgstr ""
+msgstr "pa_context_get_sink_info_by_index() fehlgeschlagen"
 
-#: ../src/pavucontrol.cc:1796
+#: ../src/pavucontrol.cc:1841
 msgid "pa_context_get_source_info_by_index() failed"
-msgstr ""
+msgstr "pa_context_get_source_info_by_index() fehlgeschlagen"
 
-#: ../src/pavucontrol.cc:1809
-#: ../src/pavucontrol.cc:1822
+#: ../src/pavucontrol.cc:1854
+#: ../src/pavucontrol.cc:1867
 msgid "pa_context_get_sink_input_info() failed"
-msgstr ""
+msgstr "pa_context_get_sink_input_info() fehlgeschlagen"
 
-#: ../src/pavucontrol.cc:1835
+#: ../src/pavucontrol.cc:1880
 msgid "pa_context_get_client_info() failed"
-msgstr ""
+msgstr "pa_context_get_client_info() fehlgeschlagen"
 
-#: ../src/pavucontrol.cc:1845
-#: ../src/pavucontrol.cc:1883
+#: ../src/pavucontrol.cc:1890
+#: ../src/pavucontrol.cc:1928
 msgid "pa_context_get_server_info() failed"
-msgstr ""
+msgstr "pa_context_get_server_info() fehlgeschlagen"
 
-#: ../src/pavucontrol.cc:1877
+#: ../src/pavucontrol.cc:1922
 msgid "pa_context_subscribe() failed"
-msgstr ""
+msgstr "pa_context_subscribe() fehlgeschlagen"
 
-#: ../src/pavucontrol.cc:1889
+#: ../src/pavucontrol.cc:1934
 msgid "pa_context_client_info_list() failed"
-msgstr ""
+msgstr "pa_context_client_info_list() fehlgeschlagen"
 
-#: ../src/pavucontrol.cc:1895
+#: ../src/pavucontrol.cc:1940
 msgid "pa_context_get_sink_info_list() failed"
-msgstr ""
+msgstr "pa_context_get_sink_info_list() fehlgeschlagen"
 
-#: ../src/pavucontrol.cc:1901
+#: ../src/pavucontrol.cc:1946
 msgid "pa_context_get_source_info_list() failed"
-msgstr ""
+msgstr "pa_context_get_source_info_list() fehlgeschlagen"
 
-#: ../src/pavucontrol.cc:1907
+#: ../src/pavucontrol.cc:1952
 msgid "pa_context_get_sink_input_info_list() failed"
-msgstr ""
+msgstr "pa_context_get_sink_input_info_list() fehlgeschlagen"
 
-#: ../src/pavucontrol.cc:1913
+#: ../src/pavucontrol.cc:1958
 msgid "pa_context_get_source_output_info_list() failed"
-msgstr ""
+msgstr "pa_context_get_source_output_info_list() fehlgeschlagen"
 
-#: ../src/pavucontrol.cc:1937
-#: ../src/pavucontrol.cc:1979
+#: ../src/pavucontrol.cc:1982
+#: ../src/pavucontrol.cc:2026
 msgid "Connection failed"
 msgstr "Verbindung fehlgeschlagen"
 
