--- a/po/pl.po
+++ b/po/pl.po
@@ -5,8 +5,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: pl\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-08-22 23:19+0200\n"
-"PO-Revision-Date: 2008-08-24 23:40+0200\n"
+"POT-Creation-Date: 2008-09-02 09:17+0000\n"
+"PO-Revision-Date: 2008-09-02 18:54+0200\n"
 "Last-Translator: Piotr Drąg <piotrdrag@gmail.com>\n"
 "Language-Team: Polish <pl@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -32,15 +32,15 @@ msgstr "50%"
 
 #: ../src/pavucontrol.glade.h:3
 msgid "<b>S_how:</b>"
-msgstr "<b>Wyświ_etl:</b>"
+msgstr "<b>Wyświ_etlanie:</b>"
 
 #: ../src/pavucontrol.glade.h:4
 msgid "<b>Sho_w:</b>"
-msgstr "<b>_Wyświetl:</b>"
+msgstr "<b>_Wyświetlanie:</b>"
 
 #: ../src/pavucontrol.glade.h:5
 msgid "<b>_Show:</b>"
-msgstr "<b>Wyświe_tl:</b>"
+msgstr "<b>Wyświe_tlanie:</b>"
 
 #: ../src/pavucontrol.glade.h:6
 msgid "<b>left-front</b>"
@@ -99,11 +99,11 @@ msgstr ""
 
 #: ../src/pavucontrol.glade.h:23
 msgid "Lock channels together"
-msgstr "Zblokuj kanały"
+msgstr "Zblokowanie kanałów"
 
 #: ../src/pavucontrol.glade.h:24
 msgid "Mute audio"
-msgstr "Wycisz dźwięk"
+msgstr "Wyciszenie dźwięku"
 
 #: ../src/pavucontrol.glade.h:25
 msgid "Open menu"
