Updated de translation with input from gnome-de (thanks andre klapper).
Transmitted-via: Transifex (translate.fedoraproject.org)

--- a/po/de.po
+++ b/po/de.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: pavucontrol\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-08-29 09:18+0000\n"
-"PO-Revision-Date: 2008-08-29 12:32+0100\n"
-"Last-Translator: Fabian Affolter <fab@fedoraproject.org>\n"
+"PO-Revision-Date: 2008-09-05 12:25+0200\n"
+"Last-Translator: Florian Steinel <Florian.Steinel@googlemail.com>\n"
 "Language-Team: German <fedora-trans-de@redhat.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -50,7 +50,7 @@ msgstr "<b>_Anzeigen:</b>"
 
 #: ../src/pavucontrol.glade.h:6
 msgid "<b>left-front</b>"
-msgstr "<b>links-vorne</b>"
+msgstr "<b>vorne links</>"
 
 #: ../src/pavucontrol.glade.h:7
 msgid "<i>No application is currently playing audio.</i>"
@@ -77,10 +77,10 @@ msgid ""
 "Monitors"
 msgstr ""
 "Alle Eingabegeräte\n"
-"Alle ausser Bildschirme\n"
-"HardwareEingabegeräte\n"
+"Alle außer Beobachter\n"
+"Hardware-Eingabegeräte\n"
 "Virtuelle Eingabegeräte\n"
-"Bildschirme"
+"Beobachter"
 
 #: ../src/pavucontrol.glade.h:16
 msgid ""
@@ -99,25 +99,25 @@ msgid ""
 "Applications\n"
 "Virtual Streams"
 msgstr ""
-"Alle Streams\n"
+"Alle Spuren\n"
 "Anwendungen\n"
-"Virtuelle Streams"
+"Virtuelle Spuren"
 
 #: ../src/pavucontrol.glade.h:23
 msgid "Lock channels together"
-msgstr "Blockieren aller Kanälen zusammen"
+msgstr "Kanäle zusammen anpassen"
 
 #: ../src/pavucontrol.glade.h:24
 msgid "Mute audio"
-msgstr "Audio stumm schalten"
+msgstr "Stummschalten"
 
 #: ../src/pavucontrol.glade.h:25
 msgid "Open menu"
-msgstr "Öffne Menü"
+msgstr "Menü öffnen"
 
 #: ../src/pavucontrol.glade.h:26
 msgid "Stream Title"
-msgstr "Stream-Titel"
+msgstr "Spurtitel"
 
 #: ../src/pavucontrol.glade.h:28
 msgid "_Input Devices"
@@ -170,12 +170,12 @@ msgstr "pa_context_set_default_source() fehlgeschlagen"
 #: ../src/pavucontrol.cc:731
 #: ../src/pavucontrol.cc:834
 msgid "_Move Stream..."
-msgstr "_Verschiebe Stream..."
+msgstr "Spur _verschieben …"
 
 #: ../src/pavucontrol.cc:732
 #: ../src/pavucontrol.cc:835
 msgid "_Terminate Stream"
-msgstr "_Beende Stream"
+msgstr "Spur _beenden"
 
 #: ../src/pavucontrol.cc:758
 msgid "pa_context_set_sink_input_volume() failed"
@@ -207,7 +207,7 @@ msgstr "pa_ext_stream_restore_write() fehlgeschlagen"
 
 #: ../src/pavucontrol.cc:1065
 msgid "Failed to read data from stream"
-msgstr "Lesen der Stream-Daten fehlschlagen"
+msgstr "Lesen des Datenstroms fehlgeschlagen"
 
 #: ../src/pavucontrol.cc:1099
 #: ../src/pavucontrol.cc:1135
@@ -217,21 +217,20 @@ msgstr "Ausschlagsserkennung"
 #: ../src/pavucontrol.cc:1100
 #: ../src/pavucontrol.cc:1136
 msgid "Failed to create monitoring stream"
-msgstr "Erstellung des Überwachungsstream fehlgeschlagen"
+msgstr "Erstellung des Beobachterdatenstroms fehlgeschlagen"
 
 #: ../src/pavucontrol.cc:1108
 #: ../src/pavucontrol.cc:1145
 msgid "Failed to connect monitoring stream"
-msgstr "Verbindung zu Überwachungsstream fehlgeschlagen"
+msgstr "Verbindungsaufbau zum Beobachterdatenstrom fehlgeschlagen"
 
 #: ../src/pavucontrol.cc:1385
 msgid "System Sounds"
-msgstr "System-Klänge"
+msgstr "Systemklänge"
 
 #: ../src/pavucontrol.cc:1667
-#, fuzzy
 msgid "Sink callback failure"
-msgstr "Fehler beim Lesen von GIF: %s"
+msgstr "Senke Callback-Fehler"
 
 #: ../src/pavucontrol.cc:1686
 msgid "Source callback failure"
@@ -239,7 +238,7 @@ msgstr "Quellen Callback-Fehler"
 
 #: ../src/pavucontrol.cc:1705
 msgid "Sink input callback failure"
-msgstr ""
+msgstr "Senken-Eingabe Callback-Fehler"
 
 #: ../src/pavucontrol.cc:1724
 msgid "Source output callback failure"
@@ -257,7 +256,7 @@ msgstr "Server-Information Callback-Fehler"
 #: ../src/pavucontrol.cc:1976
 #, c-format
 msgid "Failed to initialized stream_restore extension: %s"
-msgstr "Initialisierung von stream_restore extension fehlgeschlagen: %s"
+msgstr "Initialisierung der »stream_restore«-Erweiterung fehlgeschlagen: %s"
 
 #: ../src/pavucontrol.cc:1811
 msgid "pa_ext_stream_restore_read() failed"
