i18n: Fix markup error in de translation.
Spotted by spm_Draget via IRC

--- a/po/de.po
+++ b/po/de.po
@@ -57,7 +57,7 @@ msgstr "<b>_Anzeigen:</b>"
 
 #: ../src/pavucontrol.glade.h:8
 msgid "<b>left-front</b>"
-msgstr "<b>vorne links</>"
+msgstr "<b>vorne links</b>"
 
 #: ../src/pavucontrol.glade.h:9
 msgid "<i>No application is currently playing audio.</i>"
