--- a/po/it.po
+++ b/po/it.po
@@ -4,19 +4,21 @@
 #
 # Milo Casagrande <milo@ubuntu.com>, 2009.
 # mario_santagiuliana <mario at marionline.it>, 2009.
+# Antonio Ospite <ao2@ao2.it>
 msgid ""
 msgstr ""
 "Project-Id-Version: pavucontrol\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-10-14 17:10+0200\n"
-"PO-Revision-Date: 2009-04-20 19:52+0200\n"
-"Last-Translator: mario_santagiuliana <mario at marionline.it>\n"
+"PO-Revision-Date: 2016-01-07 23:54+0100\n"
+"Last-Translator: Antonio Ospite <ao2 at ao2.it>\n"
 "Language-Team: Italian <fedora-trans-it at redhat.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Lokalize 0.3\n"
+"X-Generator: Poedit 1.8.6\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: it\n"
 
 #: ../src/pavucontrol.desktop.in.h:1
 msgid "Adjust the volume level"
@@ -36,9 +38,8 @@ msgid "50%"
 msgstr "50%"
 
 #: ../src/pavucontrol.glade.h:3
-#, fuzzy
 msgid "<b>Port:</b>"
-msgstr "<b>Profilo:</b>"
+msgstr "<b>Porta:</b>"
 
 #: ../src/pavucontrol.glade.h:4
 msgid "<b>Profile:</b>"
@@ -135,16 +136,16 @@ msgstr "_Ingressi"
 # (ndt) suggerimento
 #: ../src/pavucontrol.glade.h:28
 msgid "Lock channels together"
-msgstr "Blocca entrambi i canali"
+msgstr "Blocca i canali"
 
 # (ndt) suggerimento
 #: ../src/pavucontrol.glade.h:29
 msgid "Mute audio"
-msgstr "Esclude l'audio"
+msgstr "Escludi l'audio"
 
 #: ../src/pavucontrol.glade.h:30
 msgid "Set as fallback"
-msgstr ""
+msgstr "Imposta come fallback"
 
 #: ../src/pavucontrol.glade.h:31
 msgid "Stream Title"
@@ -278,9 +279,8 @@ msgid "<small>Silence</small>"
 msgstr "<small>Silenzio</small>"
 
 #: ../src/channelwidget.cc:104
-#, fuzzy
 msgid "<small>Min</small>"
-msgstr "<small>Max</small>"
+msgstr "<small>Min</small>"
 
 #: ../src/channelwidget.cc:105
 msgid "<small>Max</small>"
@@ -325,9 +325,8 @@ msgid "on"
 msgstr ""
 
 #: ../src/sinkinputwidget.cc:38
-#, fuzzy
 msgid "Terminate Playback"
-msgstr "_Termina flusso"
+msgstr "Termina Riproduzione"
 
 #: ../src/sinkinputwidget.cc:61
 msgid "Unknown output"
@@ -375,9 +374,8 @@ msgid "from"
 msgstr ""
 
 #: ../src/sourceoutputwidget.cc:38
-#, fuzzy
 msgid "Terminate Recording"
-msgstr "_Registrazione"
+msgstr "Termina Registrazione"
 
 #: ../src/sourceoutputwidget.cc:61
 msgid "Unknown input"
@@ -409,9 +407,8 @@ msgid "pa_context_set_source_port_by_index() failed"
 msgstr "pa_context_set_source_mute_by_index() non riuscita"
 
 #: ../src/streamwidget.cc:45
-#, fuzzy
 msgid "Terminate"
-msgstr "_Termina flusso"
+msgstr "Termina"
 
 # (ndt) suggerimento
 #~ msgid "Open menu"
