i18n: improve one Italian string
The previous translation may sound like "Lock up the channels", better
to add the "together" (insieme) in there like in the English version
which gives more the idea of aggregation.

--- a/po/it.po
+++ b/po/it.po
@@ -136,7 +136,7 @@ msgstr "_Ingressi"
 # (ndt) suggerimento
 #: ../src/pavucontrol.glade.h:28
 msgid "Lock channels together"
-msgstr "Blocca i canali"
+msgstr "Blocca insieme i canali"
 
 # (ndt) suggerimento
 #: ../src/pavucontrol.glade.h:29
