--- a/CHANGELOG
+++ b/CHANGELOG
@@ -10,9 +10,8 @@ pavucontrol-qt-0.5.0 / 2018-12-01
   * Mainwindow: Don't use deprecated libpulse members
   * Translation updates
   * Improved cmake scripting
-    - set cmake_minimum_required to 3.1.0
-    - removed locale compile definitons
-    - installed man page
+    - Set cmake_minimum_required to 3.1.0
+    - Removed locale compile definitons
   * Moved translations from lxqt-l10n back to pavucontrol-qt
     - Removed obsolete translation fuctionality
     - Added translation promo in README.md
