--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,6 +5,8 @@ pavucontrol-qt-0.5.0 / 2018-12-01
   * Bumped version to 0.5.0
   * Added FreeBSD installation instructions
   * Implementation fixed:
+    - Some code modernizations like range based loops,
+      auto declared iterators and use of nullptr
     - Don't use automatic string conversions
     - Remove unused Makefile.am
     - Treat the 'off' card profile specifically
