--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,24 @@
 
+pavucontrol-qt-0.14.0 / 2019-01-25
+=================================
+
+  * Bumped version to 0.14.0
+  * Added FreeBSD installation instructions
+  * Implementation fixed:
+    - Some code modernizations like range based loops,
+      auto declared iterators and use of nullptr
+    - Don't use automatic string conversions
+    - Remove unused Makefile.am
+    - Treat the 'off' card profile specifically
+    - Mainwindow: Don't use deprecated libpulse members
+  * Improved cmake scripting
+    - Set cmake_minimum_required to 3.1.0
+    - Removed locale compile definitons
+  * Moved translations from lxqt-l10n back to pavucontrol-qt
+    - Removed obsolete translation fuctionality
+    - Added translation promo in README.md
+  * Translation updates
+
 pavucontrol-qt-0.4.0 / 2018-05-21
 =================================
 
@@ -12,8 +32,8 @@ pavucontrol-qt-0.4.0 / 2018-05-21
   * pavucontrol: Remove unique application constraint
   * Add Simplified Chinese desktop entry
 
-0.3.0 / 2017-09-24
-==================
+pavucontrol-qt-0.3.0 / 2017-09-24
+=================================
 
   * Release 0.3.0: Update changelog
   * Bump version to 0.3.0
@@ -38,8 +58,8 @@ pavucontrol-qt-0.4.0 / 2018-05-21
   * MainWindow: Add quit shortcut
   * Added pavucontrol-qt_da.desktop
 
-0.2.0 / 2016-12-11
-==================
+pavucontrol-qt-0.2.0 / 2016-12-11
+=================================
 
   * Release 0.2.0: Update changelog
   * Release 0.2.0: Update changelog
@@ -52,8 +72,8 @@ pavucontrol-qt-0.4.0 / 2018-05-21
   * CMakeLists: Remove XdgUserDirs requirement
   * mainwindow: Set icon for eventRoleWidget
 
-0.1.0 / 2016-09-24
-==================
+pavucontrol-qt-0.1.0 / 2016-09-24
+=================================
 
   * Release 0.1.0: Add changelog
   * devicewidget: Remove debug
