--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+pavucontrol-qt-0.17.0 / 2021-04-15
+==================================
+  * Removed the unused dbus dependency.
+
 pavucontrol-qt-0.16.0 / 2020-11-01
 ==================================
   * Safely iterate over card profile info array.
