--- a/src/translations/pavucontrol-qt.desktop.yaml
+++ b/src/translations/pavucontrol-qt.desktop.yaml
@@ -1,3 +1,3 @@
 Desktop Entry/Name: "PulseAudio Volume Control"
-Desktop Entry/GenericName: "Volume Control"
-Desktop Entry/Comment: "Adjust the volume level"
+Desktop Entry/GenericName: "Adjust volume levels and select audio devices"
+Desktop Entry/Comment: "Adjust volume levels and select audio devices"
