--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+pavucontrol-qt-1.2.0 / 2022-11-05
+==================================
+ * Improved `Categories` `GenericName`, and `Comment` in the desktop entry.
+
 pavucontrol-qt-1.1.0 / 2022-04-15
 ==================================
  * Modernized some trivial destructors.
