--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+pavucontrol-qt-1.3.0 / 2023-04-15
+==================================
+ * Fixed pa_stream leaks.
+ * Updated many translations.
+
 pavucontrol-qt-1.2.0 / 2022-11-05
 ==================================
  * Improved `Categories` `GenericName`, and `Comment` in the desktop entry.
