--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+pavucontrol-qt-1.4.0 / 2023-11-05
+==================================
+ * Updated translations and bumped the version.
+
 pavucontrol-qt-1.3.0 / 2023-04-15
 ==================================
  * Fixed pa_stream leaks.
