--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+pavucontrol-qt-2.0.0 / 2024-04-17
+==================================
+ * Ported to Qt6.
+
 pavucontrol-qt-1.4.0 / 2023-11-05
 ==================================
  * Updated translations and bumped the version.
