--- a/src/translations/pavucontrol-qt.desktop.yaml
+++ b/src/translations/pavucontrol-qt.desktop.yaml
@@ -1,3 +1,3 @@
 Desktop Entry/Name: "PulseAudio Volume Control"
-Desktop Entry/GenericName: "PulseAudio/Pipewire Volume Control"
+Desktop Entry/GenericName: "Qt GUI for Controlling PulseAudio Volume"
 Desktop Entry/Comment: "Adjust volume levels and select audio devices"
