Pre-release changes

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+pavucontrol-qt-2.1.0 / 2024-11-05
+==================================
+ * Updated `pavucontrol-qt.desktop.yaml`.
+ * Fixed the limits of offset spin-box.
+
 pavucontrol-qt-2.0.0 / 2024-04-17
 ==================================
  * Ported to Qt6.
