Pre-release changes

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+pavucontrol-qt-2.2.0 / 2025-04-17
+==================================
+ * Updated translations and bumped the version.
+
 pavucontrol-qt-2.1.0 / 2024-11-05
 ==================================
  * Updated `pavucontrol-qt.desktop.yaml`.
