--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+pavucontrol-qt-2.3.0 / 2025-11-05
+==================================
+ * Updated translations and bumped the version.
+
 pavucontrol-qt-2.2.0 / 2025-04-17
 ==================================
  * Updated translations and bumped the version.
